--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 body {
 background-image:url('../birthday-project/img/backy.jpg');
+background-position: center;
 width: 100%;
 height: 100%;
 }
 .col-md-8 {
     align-items: center;
-    padding:  20px 300px ;
+    padding:  5px  ;
 }
 #random-name {
     margin: 2rem 0;
