styled card-title selector

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ height: 100%;
 }
 .card-title{
     font-weight: bold;
-    font-size: xx-large;
+    font-size:40px;
 }
 #gender{
     font-weight: bold;
