added text-decoration to p selector

--- a/styles.css
+++ b/styles.css
@@ -29,4 +29,5 @@ height: 100%;
    p{
        font-family: Georgia, 'Times New Roman', Times, serif;
       font-size: medium;
+      text-decoration: black;
    }
