changed the style of AkhanName selector

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ height: 100%;
     font-style: italic;
 }
 #AkhanName{
-    font-weight: bolder;
+    font-weight: bold;
     font-style: normal;
 }
 #Birthdate{
