changed the styling of AkhanName selector

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ height: 100%;
     font-style: italic;
 }
 #AkhanName{
-    font-weight: bold;
+    font-weight: bolder;
     font-style: normal;
 }
 #Birthdate{
