--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ height: 100%;
 }
 .card-title{
     font-weight: bolder;
-    font-size:40px;
+    font-size:50px;
 }
 #gender{
     font-weight: bold;
@@ -29,4 +29,6 @@ height: 100%;
        font-family: Georgia, 'Times New Roman', Times, serif;
       font-size: medium;
       text-decoration: black;
+      font-style: normal;
    }
+ 
